--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.8.0",
     "slugify": "^1.6.5"
   }
 }
