--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "NODE_ENV=production node server",
     "dev": "nodemon server",
-    "test": "npm run dev"
+    "test": "jest --testEnvironment=node --runInBand ./tests"
   },
   "author": "Ashwani",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
