--- a/package.json
+++ b/package.json
@@ -11,21 +11,31 @@
   "author": "Ashwani",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.5.0",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.6.0",
+    "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
+    "jest": "^29.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^8.10.2",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "node-geocoder": "^4.2.0",
     "nodemailer": "^6.8.0",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "supertest": "^6.3.3",
+    "swagger-ui-express": "^4.5.0",
+    "xss-clean": "^0.1.1",
+    "yamljs": "^0.3.0"
   }
 }
